white space resolved

--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,10 +1,16 @@
 .footer {
-    margin: 60px auto 66px;
+    margin: auto;
+    padding: 60px 0 66px;
     font-size: 18px;
     line-height: 22px;
     color: #545454;
     max-width: 880px;
   }
+
+  .footer :first-child {
+    margin: 0;
+  }
+
   @media screen and (max-width: 879px) {
     .footer {
       max-width: 582px;
@@ -16,6 +22,7 @@
       font-size: 14px;
       line-height: 16.94px;
       max-width: 282px;
-      margin: 48px auto 36px;
+      margin: auto;
+      padding: 48px 0 36px;
     }
   }
