--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -4,7 +4,7 @@
     max-height: 120px;
 }
 
-@media screen and (maz-width: 880px) {
+@media screen and (max-width: 880px) {
     .profile__avatar {
         margin: 20px auto;
     }
